--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
+    <script defer src="https://code.jquery.com/jquery-3.6.1.slim.min.js"></script>
+    <script defer src="./js/App.js"></script>
 </head>
 <body>
+    <div id="cursor"></div>
     <div class="circulos">
         <svg class="circulo circulo1" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
             <path class="path" d="M62.5,-24.7C68,-3.5,50.3,20.8,32.1,30.9C13.8,41.1,-5.2,37.1,-26.1,24.6C-47,12.1,-69.9,-9.1,-65.9,-28.3C-61.9,-47.5,-30.9,-64.8,-1.2,-64.4C28.5,-64,57,-45.9,62.5,-24.7Z" transform="translate(100 100)" />
