--- a/index.html
+++ b/index.html
@@ -61,28 +61,19 @@
             <h2 class="h2">Works</h2>
             <div class="grid">
                 <article class="article">
-                    <a class="a" href="#" title="Amazon Copy">
+                    <a class="a" href="https://cryptofundamental.vercel.app/" target="_blank" title="CryptoFundamental">
                         <figure class="figure">
-                            <img src="assets/amzn.png" alt="Imagen" class="img" loading="lazy">
+                            <img src="assets/cryptofundamental.png" alt="Imagen" class="img" loading="lazy">
                         </figure>
-                        <h4 class="h4">Amazon Copy</h4>
+                        <h4 class="h4">CryptoFundamental</h4>
                     </a>
-                </article>
-                <article class="article">
-                    <a class="a" href="#" title="MercadoLibre Copy">
-                        <figure class="figure">
-                            <img src="assets/meli.png" alt="Imagen" class="img" loading="lazy">
-                        </figure>
-                        <h4 class="h4">MercadoLibre Copy</h4>
-                    </a>
-                </article>
             </div>
         </section>
         <section class="seccion about" id="about">
             <h2 class="h2">About Me</h2>
-            <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam recusandae ipsa sapiente facere sequi totam.</p>
-            <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam recusandae ipsa sapiente facere sequi totam.</p>
-            <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam recusandae ipsa sapiente facere sequi totam.</p>
+            <p class="p">Hi, my name is Ramiro Dubini and I'am 18 years old. I'am a front-end developer Project Manager and Blockchain enthusiast.</p>
+            <p class="p">I'am currently studing back-end development and increasing my skills at front-end development. I love web 3.0 so my next goal is to learn how to develop with Solidity and Rust.</p>
+            <p class="p">I always stood out for my soft skills. Currently I can develop with HTML, CSS, SASS, Boostrap, JavaScript, ViteJs, ReactJs and jQuery. I drop all of my social media below</p>
             <ul class="rrss">
                 <li class="li">
                     <a href="https://github.com/Ramiro-Dubini" class="a" title="Github" target="_blank" rel="noopener noreferrer">
