--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="nav">
             <ul class="ul">
                 <li class="li"><a href="#home" title="Home" class="a">Home</a></li>
-                <li class="li"><a href="#works" title="Works" class="a">Works</a></li>
+                <li class="li"><a href="#works" title="Works" class="a">Projects</a></li>
                 <li class="li"><a href="#about" title="About" class="a">About</a></li>
             </ul>
         </nav>
@@ -46,7 +46,7 @@
         <div class="seccion" id="home">
             <section class="section info">
                 <h2 class="h2">Ramiro Dubini</h2>
-                <h3 class="h3">Frontend Developer</h3>
+                <h3 class="h3">Welcome to my personal page</h3>
                 <ul class="ul">
                     <li class="li">
                         <a href="https://www.linkedin.com/in/ramirodubini/ " target="_blank" class="a" title="LinkedIn">Go to my LinkedIn</a>
@@ -58,7 +58,7 @@
             </section> 
         </div>
         <section class="seccion works" id="works">
-            <h2 class="h2">Works</h2>
+            <h2 class="h2">Projects</h2>
             <div class="grid">
                 <article class="article">
                     <a class="a" href="https://cryptofundamental.vercel.app/" target="_blank" title="CryptoFundamental">
